# desk_assist

./: Cargo.toml  README.md  notes.md
desk-assist-core/: Cargo.toml
desk-assist-core/src/: chunker.rs  config.rs  extractor.rs  lib.rs  main.rs  ollama.rs  server.rs  storage.rs
desk-assist-file-monitor/: Cargo.toml
desk-assist-file-monitor/src/: main.rs
