[package]
name = "desk-assist-core"
version.workspace = true
edition.workspace = true

[lib]
name = "desk_assist_core"
path = "src/lib.rs"

[[bin]]
name = "desk-assist-core"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = { version = "1.15.0", features = ["default"] }
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
config = "0.15"
lopdf = "0.37"
pulldown-cmark = "0.13"
html2text = "0.15.3"
sha2 = "0.10.9"
chrono = { version = "0.4.41", features = ["serde"] }